--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,5 @@ jobs:
       with:
         ocaml-version: ${{ matrix.ocaml-version }}
     # Runs a set of commands using the runners shell
-    - run: git clone https://github.com/GeorgeBurac/osort.git
-    - run: cd osort
-    - run: make
+    - run: opam exec -- dune build
     - run: opam exec -- dune runtest      
